k-means-spark-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: k-means-spark
  name: k-means-spark
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: k-means-spark
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/k-means-pyspark-default: "true"
        io.kompose.service: k-means-spark
    spec:
      containers:
        - args:
            - bash
            - -c
            - python src/kmeans.py
          image: olegggatttor/k-means-spark:latest
          name: k-means-spar
          ports:
            - containerPort: 4040
            - containerPort: 8888
          resources: {}
      restartPolicy: Always
status: {}
