clickhouse-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: clickhouse
  name: clickhouse
spec:
  ports:
    - name: "9000"
      port: 9000
      targetPort: 9000
    - name: "8123"
      port: 8123
      targetPort: 8123
  selector:
    io.kompose.service: clickhouse
status:
  loadBalancer: {}
