k-means-spark-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: k-means-spark
  name: k-means-spark
spec:
  ports:
    - name: "4040"
      port: 4040
      targetPort: 4040
    - name: "8888"
      port: 8888
      targetPort: 8888
  selector:
    io.kompose.service: k-means-spark
status:
  loadBalancer: {}
